Fix endpoints and tests (#53)
* Fix endpoints and tests

* Auto commit: update dependencies & generated client & code formatting

* Fix import ordering

* Auto commit: update dependencies & generated client & code formatting

---------
